<resources>
    <string name="app_name">KotlinMVP</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="add">Add</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_heroes">Герои</string>
    <string name="title_settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_btm_nav2">MainActivity</string>
    <string name="hero_image">Hero Image</string>

    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="type">Type:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="created">Created:</string>
    <string name="back">Назад</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="no_data">Нет сохраненных данных</string>

    <string name="infoId">"Id: "</string>
    <string name="infoName">"Name: "</string>
    <string name="infoStatus">"Status: "</string>
    <string name="infoSpecies">"Species: "</string>
    <string name="infoType">"Type: "</string>
    <string name="infoGender">"Gender: "</string>
    <string name="infoOrigin">"Origin: "</string>
    <string name="infoLocation">"Location: "</string>
    <string name="infoCreated">"Created: "</string>
    <string name="search">Search</string>
</resources>