<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ek.kotlinmvp.presentation.homeFragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ek.kotlinmvp.presentation.heroFragment.HeroFragment"
        android:label="@string/title_heroes"
        tools:layout="@layout/fragment_hero" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ek.kotlinmvp.presentation.settingsFragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>